--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Portfolio</title>
-<link rel="stylesheet" media="all" href="https://urankitano.github.io/portfolio.github.io/main/ress.min.css" />
-<link rel="stylesheet" media="all" href="https://urankitano.github.io/portfolio.github.io/main/style.css" />
+<link rel="stylesheet" media="all" href="https://urankitano.github.io/portfolio.github.io/ress.min.css" />
+<link rel="stylesheet" media="all" href="https://urankitano.github.io/portfolio.github.io/style.css" />
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/style.js"></script>
 
