--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <div class="row">	
 	<div class="col span-4">
 	<figure>
-		<img src="img/Martens.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/Martens.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
