--- a/subpage.html
+++ b/subpage.html
@@ -10,7 +10,7 @@
 <script src="js/style.js"></script>
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="https://github.com/urankitano/portfolio.github.io/blob/main/favicon.png?raw=true">
     
 </head>
 
@@ -22,8 +22,8 @@
     <div class="head">
         <h1><a href="index.html">PORTFOLIO</a></h1>
 		<div class="snsbox">
-			<img src="img/in-icon.png" alt="Instagram">
-		    <img src="img/fb-icon.png" alt="Facebook"></div>
+			<img src="https://github.com/urankitano/portfolio.github.io/blob/main/in-icon.png?raw=true" alt="Instagram">
+		    <img src="https://github.com/urankitano/portfolio.github.io/blob/main/fb-icon.png?raw=true" alt="Facebook"></div>
         </div>
     </div>
     </div>
@@ -44,7 +44,7 @@
 </div>
 </header>
     <div class="mainimg">
-       <img src="img/subimg.jpg" alt="サブページ画像">
+       <img src="https://github.com/urankitano/portfolio.github.io/blob/main/subimg.jpg?raw=true" alt="サブページ画像">
     </div>
     <main>
 	<article>
