--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="js/style.js"></script>
 
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="img/favicon.png">
+<link rel="icon" type="image/png" href="https://github.com/urankitano/portfolio.github.io/blob/main/favicon.png?raw=true">
     
 </head>
 <body>
@@ -21,8 +21,8 @@
     <div class="head">
         <h1><a href="index.html">PORTFOLIO</a></h1>
 		<div class="snsbox">
-			<img src="img/in-icon.png" alt="Instagram">
-		    <img src="img/fb-icon.png" alt="Facebook"></div>
+			<img src="https://github.com/urankitano/portfolio.github.io/blob/main/in-icon.png?raw=true" alt="Instagram">
+		    <img src="https://github.com/urankitano/portfolio.github.io/blob/main/fb-icon.png?raw=true" alt="Facebook"></div>
         </div>
     </div></div>
 <div class="row">
@@ -42,7 +42,7 @@
     </div>
     </header>
     <div class="mainimg">
-              <img src="img/mainimg.jpg" alt="メイン画像">
+              <img src="https://github.com/urankitano/portfolio.github.io/blob/main/mainimg.jpg?raw=true" alt="メイン画像">
         </div>
     <main>
 <section>
@@ -104,19 +104,19 @@
 <div class="row">
 	<div class="col span-4">
 	<figure>
-		<img src="img/menu.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/menu.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/morningmenu.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/morningmenu.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/curry.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/curry.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
@@ -124,19 +124,19 @@
 <div class="row">
 	<div class="col span-4">
 	<figure>
-		<img src="img/osaka.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/osaka.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/popeye.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/popeye.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/yaokin.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/yaokin.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
@@ -144,19 +144,19 @@
 <div class="row">
     <div class="col span-4">
 	<figure>
-		<img src="img/kitakazetotaiyou.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/kitakazetotaiyou.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/lego.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/lego.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/tv01.png" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/tv01.png?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
@@ -164,19 +164,19 @@
 <div class="row">
 	<div class="col span-4">
 	<figure>
-		<img src="img/tv02.png" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/tv02.png?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/tv03.png" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/tv03.png?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/tv04.png" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/tv04.png?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
@@ -190,13 +190,13 @@
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/tokyokobetsu.jpg" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/tokyokobetsu.jpg?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
 	<div class="col span-4">
 	<figure>
-		<img src="img/shinbun.png" alt="画像">
+		<img src="https://github.com/urankitano/portfolio.github.io/blob/main/shinbun.png?raw=true" alt="画像">
 		<figcaption>キャプション</figcaption>
 		</figure>
 	</div>
