--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         </div>
     </div>
     </header>
-    <div class="mainimg">
-              <img src="https://github.com/urankitano/portfolio.github.io/blob/main/mainimg.jpg?raw=true" alt="メイン画像">
+    <div class="main">
+              <img src="https://github.com/urankitano/portfolio.github.io/blob/main/main.jpg?raw=true" alt="メイン画像">
         </div>
     <main>
 <section>
