--- a/subpage.html
+++ b/subpage.html
@@ -44,7 +44,7 @@
 </div>
 </header>
     <div class="mainimg">
-       <img src="https://github.com/urankitano/portfolio.github.io/blob/main/subimg.jpg?raw=true" alt="サブページ画像">
+       <img src="https://github.com/urankitano/portfolio.github.io/blob/main/sub.jpg?raw=true" alt="サブページ画像">
     </div>
     <main>
 	<article>
